My spring boot mvc solution

--- a/manifest.yml
+++ b/manifest.yml
@@ -5,5 +5,4 @@ applications:
   routes:
   - route: seelan-pal-tracker.cfapps.io/
   env:
-    WELCOME_MESSAGE: Hello from the review environment.
-    JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
+    WELCOME_MESSAGE: Hello from the review environment
