--- a/manifest.yml
+++ b/manifest.yml
@@ -6,3 +6,4 @@ applications:
   - route: seelan-pal-tracker.cfapps.io/
   env:
     WELCOME_MESSAGE: Hello from the review environment
+    JBP_CONFIG_OPEN_JDK_JRE: 1.8+
