--- a/manifest.yml
+++ b/manifest.yml
@@ -1,4 +1,4 @@
-----
+---
 applications:
 - name: pal-tracker
   path: build/libs/pal-tracker.jar
@@ -6,3 +6,4 @@ applications:
   - route: seelan-pal-tracker.cfapps.io/
   env:
     WELCOME_MESSAGE: Hello from the review environment
+    JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
