--- a/build.gradle
+++ b/build.gradle
@@ -31,13 +31,13 @@ test {
     useJUnitPlatform()
 }
 
-def developmentDbUrl = "jdbc:mysql://localhost:3306/tracker_dev?user=tracker&password=Tracker1234#&useSSL=false&useTimezone=true&serverTimezone=UTC&useLegacyDatetimeCode=false"
+def developmentDbUrl = "jdbc:mysql://localhost:3306/tracker_dev?user=tracker&password=Tracker1234#&useTimezone=true&serverTimezone=UTC&useLegacyDatetimeCode=false"
 bootRun.environment([
         "WELCOME_MESSAGE": "hello",
         "SPRING_DATASOURCE_URL": developmentDbUrl,
 ])
 
-def testDbUrl = "jdbc:mysql://localhost:3306/tracker_test?user=tracker&password=Tracker1234#&useSSL=false&useTimezone=true&serverTimezone=UTC&useLegacyDatetimeCode=false"
+def testDbUrl = "jdbc:mysql://localhost:3306/tracker_test?user=tracker&password=Tracker1234#&useTimezone=true&serverTimezone=UTC&useLegacyDatetimeCode=false"
 test.environment([
         "WELCOME_MESSAGE": "Hello from test",
         "SPRING_DATASOURCE_URL": testDbUrl,
