--- a/manifest.yml
+++ b/manifest.yml
@@ -5,7 +5,7 @@ applications:
   routes:
   - route: seelan-pal-tracker.cfapps.io/
   env:
-    WELCOME_MESSAGE: hello
+    WELCOME_MESSAGE: Hello from Cloud Foundry
     JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
     MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE: "*"
     MANAGEMENT_ENDPOINT_HEALTH_SHOWDETAILS: always
